--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
 fastapi>=0.110.0
 uvicorn>=0.28.0
-python-multipart>=0.0.9
 jinja2>=3.1.3
+python-multipart>=0.0.9
+python-dotenv>=1.0.1
+google-generativeai>=0.3.2
+google-api-python-client>=2.118.0
 pandas>=2.2.0
 openpyxl>=3.1.2
-google-generativeai>=0.3.2
-pytest>=8.0.0
-pytest-cov>=4.1.0
-httpx>=0.27.0  # このパッケージが必要
-python-dotenv>=1.0.1
+pytest>=7.4.0
+httpx>=0.25.0
