--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -34,9 +34,11 @@ jobs:
     
     - name: Test with pytest
       run: |
+        export PYTHONPATH="${PYTHONPATH}:$(pwd)"
         pytest --cov=. --cov-report=xml --cov-report=term
       env:
         GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
+        PYTHONPATH: .
     
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v3
