--- a/pytest.ini
+++ b/pytest.ini
@@ -1,7 +1,10 @@
 [pytest]
 markers =
     integration: marks tests as integration tests (deselect with '-m "not integration"')
-    
+
+# Pythonパス設定
+pythonpath = .
+
 # テンプレートレスポンスの警告を無視
 filterwarnings =
     ignore:The `name` is not the first parameter anymore:DeprecationWarning
